fixed grocery list on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -331,6 +331,9 @@
   #groceryList {
     width: 100%;
     padding: 30px;
+    overflow-y: scroll;
+    white-space: normal;
+    align-self: center;
   }
 
   #groceryList td {
@@ -461,5 +464,22 @@
   h2 {
     font-size: 18px;
     line-height: 24px;
+  }
+
+
+  #groceryList {
+    overflow-y: scroll;
+   border-top: solid thin;
+   text-align: left;
+   padding: 0px;
+  }
+
+  #groceryList td {
+    padding: 0px;
+  }
+  #groceryList form {
+    width: 100%;
+    margin: 0;
+    margin-right: 10px;
   }
 }
